--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <div class= "col-12 mx-auto lowerfooter">
                         <p class="" >Copyright@2021 | Archiblad</p>
                       
-                        <p class="" >This Template is Designed by <span class=""><b>Vijul Malviya</b></span></p>
+                        <p class="" >This Template is Designed by <span class=""><b>Clecotech International</b></span></p>
                         </div>
                     </div>
                 </div>
